--- a/style.css
+++ b/style.css
@@ -119,8 +119,8 @@ article {
 .tooltip-text {
   visibility: hidden; /* Oculta el tooltip por defecto */
   width: 150px; /* Ancho del tooltip */
-  background-color: #333; /* Color de fondo del tooltip */
-  color: #fff; /* Color del texto del tooltip */
+  background-color: black; /* Color de fondo del tooltip */
+  color: white; /* Color del texto del tooltip */
   text-align: center; /* Centra el texto dentro del tooltip */
   border-radius: 5px; /* Bordes redondeados */
   padding: 5px; /* Espaciado interno del tooltip */
